--- a/app/views/admin/applications.html.erb
+++ b/app/views/admin/applications.html.erb
@@ -6,15 +6,30 @@
     <% elsif pet.accepted?(@application.id) == true %>
       <p>Pet accepted for this Application</p>
     <% elsif pet.accepted?(@application.id) == nil %>
-      <%= button_to("Accept", "/admin/applications/#{@application.id}/pets/#{pet.id}?q=accept", id: "#{pet.name} accept", method: :post) %>
+    <%= render partial: 'button', locals: {
+        button_name: "Accept",
+        url: "/admin/applications/#{@application.id}/pets/#{pet.id}?q=accept",
+        id: "#{pet.name} accept",
+        method: :post
+      } %>
+
+    <%= render partial: 'button', locals: {
+        button_name: "Deny",
+        url: "/admin/applications/#{@application.id}/pets/#{pet.id}?q=deny",
+        id: "#{pet.name} deny",
+        method: :post
+      } %>
     <% else %>
     <% end %>
 
-    <% if pet.accepted?(@application.id) == nil %>
-      <%= button_to("Deny", "/admin/applications/#{@application.id}/pets/#{pet.id}?q=deny", id: "#{pet.name} deny", method: :post) %>
-    <% elsif pet.accepted?(@application.id) != true %>
+    <% if pet.accepted?(@application.id) != true %>
       <p>Pet denied for this application.</p>
     <% else %>
-      <%= button_to("Deny", "/admin/applications/#{@application.id}/pets/#{pet.id}?q=deny", id: "#{pet.name} deny", method: :post) %>
+    <%= render partial: 'button', locals: {
+        button_name: "Deny",
+        url: "/admin/applications/#{@application.id}/pets/#{pet.id}?q=deny",
+        id: "#{pet.name} deny",
+        method: :post
+      } %>
     <% end %>
 <% end %>
